--- a/notebooks/visualizingDataset.Rmd
+++ b/notebooks/visualizingDataset.Rmd
@@ -63,7 +63,6 @@ ggplot(dataset, aes(x=UsedAnyDrug)) +
 
 Aggiungere anche per ogni droga.
 
-
 ```{r}
 ggplot(dataset) +
   geom_density(aes(dataset$SensationSeeking, fill=factor(Cocaine)), alpha=0.3)
@@ -79,3 +78,10 @@ Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by press
 When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
 
 The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+
+
+```{r}
+ggplot(dataset, aes(x=Heroin)) +
+  geom_bar() +
+  geom_text(stat='count', aes(label=..count..), position = position_stack(vjust = 0.5))
+```
